landing villas + news part

--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -4,6 +4,7 @@
  @import "neat/neat";
 
  @import "_addons/rem";
+ @import "_addons/slick";
 
  @import "_base/variables";
  @import "_base/base";
@@ -20,3 +21,5 @@
  @import "_pages/about";
  @import "_pages/services";
  @import "_pages/special-offers";
+ @import "_pages/villas";
+ @import "_pages/news";
