--- a/app/assets/sass/_base/_font-face.scss
+++ b/app/assets/sass/_base/_font-face.scss
@@ -8,7 +8,25 @@
 	font-weight: normal;
 	font-style: normal;
 }
+@font-face {
+	font-family: 'Lato';
+	src: url('../fonts/Lato-Medium.eot');
+	src: url('../fonts/Lato-Medium.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/Lato-Medium.woff') format('woff'),
+		url('../fonts/Lato-Medium.ttf') format('truetype');
+	font-weight: 500;
+	font-style: normal;
+}
 
+@font-face {
+	font-family: 'Lato';
+	src: url('../fonts/Lato-MediumItalic.eot');
+	src: url('../fonts/Lato-MediumItalic.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/Lato-MediumItalic.woff') format('woff'),
+		url('../fonts/Lato-MediumItalic.ttf') format('truetype');
+	font-weight: 500;
+	font-style: italic;
+}
 @font-face {
 	font-family: 'Playfair Display';
 	src: url('../fonts/PlayfairDisplay-Regular.eot');
