--- a/app/assets/sass/_modules/_landing.scss
+++ b/app/assets/sass/_modules/_landing.scss
@@ -3,7 +3,7 @@
   position: relative;
   z-index: 5;
   overflow: hidden;
-  img {
+  > img {
     object-fit: cover;
     position: $position;
     z-index: 5;
@@ -23,14 +23,62 @@
     }
   }
   .scrolldown {
-    width: 100%;
     @include font(1.4, 10);
     color: white;
     text-align: center;
-    background: rgba(0,0,0,0.3);
+    font-weight: 500;
+  	font-style: italic;
 
+    width: 100%;
+    background: rgba(0,0,0,0.3);
     position: $position;
     bottom:0;
     z-index: 9;
+  }
+}
+.villas .landing {
+  .half {
+    min-height: 100vh;
+    width: 50%;
+    float: left;
+    display: block;
+    position: relative;
+    z-index: 8;
+
+    > a {
+      @include size(100%);
+      display: block;
+      &:hover {
+        img {
+          opacity: 1;
+        }
+      }
+    }
+    .wrapper {
+      width: 50%;
+    }
+    img {
+      width: 50%;
+      position: fixed;
+      z-index: 6;top: 0;
+      opacity: 0;
+      @include transition(all 0.5s ease-in-out);
+    }
+    h2, p {
+      width: 100%;
+      text-align: center;
+    }
+    h2 {
+      font-size: 4.5rem;
+      color: white;
+      font-style: italic;
+      margin-bottom: 4rem;
+      list-height: 5rem;
+    }
+    p {
+      color: $golden;
+      font-size: 1.6rem;
+    }
+
   }
 }
