first preprod deployment

--- a/app/assets/styles/main.css
+++ b/app/assets/styles/main.css
@@ -1018,6 +1018,7 @@ footer div ul li a img {
   color: white;
   text-align: center;
   font-style: italic;
+  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.35);
 }
 .landing .scrolldown {
   font-size: 14px;
