--- a/app/assets/sass/_modules/_landing.scss
+++ b/app/assets/sass/_modules/_landing.scss
@@ -20,6 +20,8 @@
       color: white;
       text-align: center;
       font-style: italic;
+
+      text-shadow: 2px 2px 8px rgba(0,0,0,0.35);
     }
   }
   .scrolldown {
