--- a/app/assets/sass/_modules/_general.scss
+++ b/app/assets/sass/_modules/_general.scss
@@ -22,7 +22,11 @@
     &:after {
       position: absolute;
       right: 3rem;
-      content: "\2192";
+      top:2.1rem;
+      content: " ";
+      @include size(0.6rem 1rem);
+      background: url('../images/asset-caret-right.svg') no-repeat center center;
+      background-size: 0.6rem;
       opacity: 0;
 
       @include transition(all 0.25s ease-out);
