--- a/app/assets/sass/_base/_variables.scss
+++ b/app/assets/sass/_base/_variables.scss
@@ -29,7 +29,7 @@ $golden: #d2bb71;
 $link-color: #293443;
 $hover-color: lighten($link-color, 10);
 $heading-color: $dark;
-$hr-color: #fff;
+$hr-color: #e9e9e9;
 
 /**
  * Base styles 		~	 	Type
