--- a/app/assets/sass/_modules/_header-footer.scss
+++ b/app/assets/sass/_modules/_header-footer.scss
@@ -23,7 +23,7 @@ header {
     float: right;
     ul {
       list-style: none;
-      padding: 0;
+      padding: 0; margin: 0;
       li {
         display: inline-block;
         margin-right: 4rem;
