--- a/app/assets/sass/_modules/_datepicker.scss
+++ b/app/assets/sass/_modules/_datepicker.scss
@@ -101,11 +101,23 @@
     margin-right: 5rem;
 
     .ui-datepicker-header {
+      position: relative;
+      .ui-datepicker-prev,
+      .ui-datepicker-next {
+        @include size(0.85rem 1.25rem);
+        position: absolute;
+        text-indent: -99999px;
+        cursor: pointer;
+      }
       .ui-datepicker-prev {
-// TO DO
+        left: 0;
+        background: url('../images/asset-caret-left.svg') no-repeat center center;
+        background-size: 0.85rem;
       }
       .ui-datepicker-next {
-// TO DO
+        right: 0;
+        background: url('../images/asset-caret-right.svg') no-repeat center center;
+        background-size: 0.85rem;
       }
       .ui-datepicker-title {
         font-family: $title-font;
@@ -113,6 +125,8 @@
         color: $golden;
         font-size: 1.4rem;
         text-align: center;
+        line-height: 1.5rem;
+        margin: 0 0 2.5rem;
       }
     }
     table.ui-datepicker-calendar {
@@ -137,28 +151,30 @@
           height: 3rem;
           td {
             width: 4rem;
-            line-height: 1.75rem;
+            height: 1.75rem;
             padding: 0 .5rem;
 
-            span {
+            span, a {
+              @include size(100%);
               display: block;
-              width: 100%;
               text-align:center;
               font-size: $font-size;
               font-family: $title-font;
               text-decoration: none;
+              line-height:2;
+              color:#cacaca;
             }
 
 
             &.ui-datepicker-other-month {
               span {
-                color:#656565;
+                color:#646464;
               }
             }
             &.ui-datepicker-unselectable { /* like past days in current month */
               cursor: not-allowed;
               span {
-                color: $hr-color;
+                color:#646464;
               }
             }
             &.ui-datepicker-today {
@@ -166,17 +182,10 @@
             }
 
             a {
-              @include size(100%);
-              display: block;
-              &.ui-state-default {
-                text-align:center;
-                font-size: $font-size;
-                color: $hr-color;
-                font-family: $title-font;
-                text-decoration: none;
-              }
+              &.ui-state-default { }
               &.ui-state-active {
                 background-color: $golden;
+                color:white;
               }
             }
           }
