--- a/app/assets/sass/_modules/_datepicker.scss
+++ b/app/assets/sass/_modules/_datepicker.scss
@@ -14,6 +14,7 @@
     float: left;
     box-sizing: content-box;
     cursor: pointer;
+    @include transition(all 0.25s ease);
 
     p.datepicker-date-selected {
       position: absolute;
@@ -27,11 +28,10 @@
     p.datepicker-month {
       position: absolute;
       margin: 0;
-      @include size(auto 1.5rem);
-      bottom: 3rem; left: 57%;
+      @include size(auto 1.8rem);
+      bottom: 3rem; left: 56%;
       overflow: hidden;
 
-      font-size: 1.3rem;
       line-height: 1;
       color: #2c2c2c;
       font-family: $title-font;
@@ -39,13 +39,14 @@
 
     &:before {
       content: " ";
-      font-size: 1.3rem;
+      font-size: 1.8rem;
       font-style: italic;
       font-family: $title-font;
       color: #cacaca;
 
       position: absolute;
-      top: 2.5rem; left: 3rem;
+      left: 3rem; top: 3.5rem;
+      @include transition(all 0.25s ease);
     }
     &:after {
       content: " ";
@@ -54,17 +55,21 @@
 
       @include size(0.75rem 0.45rem);
       position: absolute;
-      right: 3rem; bottom: 3.4rem;
+      bottom: 4.8rem;
+      @include transition(all 0.25s ease);
     }
   }
   .checkin {
     &:before {content: "Check in";}
+    &:after {right: 3rem;}
   }
   .checkout {
     &:before {content: "Check out";}
+    &:after {right: 2rem;}
   }
   .guests {
     &:before {content: "Guests";}
+    &:after {right: 4.5rem;}
   }
   .submit {
     width: calc(65rem - 14.5rem - 14.5rem - 14.5rem);
@@ -83,15 +88,35 @@
       text-decoration: none;
     }
   }
+
+  // Animation
+  .checkin, .checkout {
+    &.busy {
+      &:before {
+        font-size: 1.3rem;
+        top: 2.4rem; left: 3rem;
+      }
+      &:after {
+        right: 2.5rem; bottom: 3.5rem;
+      }
+    }
+  }
 }
 
 .calendar-wrap {
   position: absolute;
   padding: 5rem 0 5rem 5rem;
   background-color: black;
-  top: 0; margin-top: -6.5rem;
+  top: 0; margin-top: -11.5rem;
   left: 50%; margin-left: -35.9rem;
   z-index: 99;
+  visibility: hidden; opacity: 0;
+  @include transition(all 0.35s ease);
+  &.open {
+    margin-top: -6.5rem;
+    opacity: 1;
+    visibility: visible;
+  }
   .hasDatepicker {
     @include span-columns(6);
 
