minor fix + rename booking.scss

--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -16,7 +16,7 @@
  @import "_modules/general";
  @import "_modules/header-footer";
  @import "_modules/landing";
- @import "_modules/datepicker";
+ @import "_modules/booking";
 
  @import "_pages/home";
  @import "_pages/about";
