page villas feed top module

--- a/app/assets/sass/_modules/_header-footer.scss
+++ b/app/assets/sass/_modules/_header-footer.scss
@@ -39,6 +39,7 @@ header {
     }
   }
   &.white {
+    z-index: 9999;
     padding: 3rem 0;
     background-color: white;
     a.logo{color: $dark;}
