--- a/app/assets/sass/_base/_variables.scss
+++ b/app/assets/sass/_base/_variables.scss
@@ -34,5 +34,5 @@ $hr-color: #e9e9e9;
 /**
  * Base styles 		~	 	Type
  */
-$base-font: 'Lato', helvetica, sans-serif;
+$base-font: "Lato", helvetica, sans-serif;
 $title-font: 'Playfair Display', garamond, serif;
