some jpgmini + loader js

--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -15,6 +15,7 @@
  @import "_base/type";
 
  @import "_modules/general";
+ @import "_modules/loading";
  @import "_modules/header-footer";
  @import "_modules/landing";
  @import "_modules/booking";
